--- a/resources/js/components/Button/Button.module.scss
+++ b/resources/js/components/Button/Button.module.scss
@@ -24,6 +24,7 @@
     }
 
     &.circle {
+        padding: 5px;
         aspect-ratio: 1 / 1;
         border-radius: 50%;
     }
@@ -84,6 +85,16 @@
     }
 }
 
+.extra {
+    background-color: #e8e8e8;
+    color: var(--text-color);
+
+    &:hover,
+    &.active {
+        background-color: var(--cl-primary);
+    }
+}
+
 .no-background {
     background-color: transparent;
     color: var(--text-color);
@@ -102,14 +113,12 @@
 
 .small {
     padding: 6px 12px;
-    border-radius: 9px 0;
+    font-size: 14px;
 }
 
 .large {
     padding: 12px 24px;
-    border-radius: 15px 0;
-    font-size: 1.8rem;
-    border-width: 2px;
+    font-size: 18px;
 }
 
 .no-click {
