--- a/resources/js/components/GlobalStyles/GlobalStyles.scss
+++ b/resources/js/components/GlobalStyles/GlobalStyles.scss
@@ -14,6 +14,8 @@
     --cl-hightlight: #1458dd;
 
     --text-color: #252c32;
+    --text-color-50: rgba(37, 44, 50, 0.5);
+
     --font-size: 16px;
 }
 
