--- a/resources/js/components/Dropdown/Dropdown.module.scss
+++ b/resources/js/components/Dropdown/Dropdown.module.scss
@@ -70,8 +70,8 @@
     max-height: 50vh;
     border-radius: 12px;
     border: 1px solid var(--text-color);
-    box-shadow: 0px 2px 8px var(--secondary);
-    background-color: var(--background);
+    box-shadow: 0px 2px 8px var(--text-color);
+    background-color: var(--bg-primary);
     overflow: hidden;
     z-index: 3;
 
