--- a/resources/js/pages/other/Login/Login.module.scss
+++ b/resources/js/pages/other/Login/Login.module.scss
@@ -1,4 +1,149 @@
-.login-page {
-    height: 2000px;
-    background-color: blue;
+.container {
+    background-color: var(--bg-secondary);
+    height: 100vh;
+    position: relative;
+}
+
+.main {
+    margin: auto;
+    width: 720px;
+    height: 512px;
+    background-color: var(--bg-primary);
+    display: flex;
+    padding: 8px 4px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 8px;
+}
+
+.left-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.logo {
+    width: 50px;
+}
+
+.title {
+    font-size: 20px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+
+    span {
+        color: var(--bg-secondary);
+    }
+
+    img {
+        height: 20px;
+        margin-left: 10px;
+        padding-bottom: 2px;
+    }
+}
+
+.google-login {
+    span {
+        font-weight: 500;
+        font-size: 14px;
+    }
+
+    button {
+        border: 1px solid black;
+    }
+}
+
+.separate {
+    margin: 15px 0 2px;
+    font-size: 13px;
+
+    .separate-text {
+        position: relative;
+    }
+
+    .separate-text::before {
+        position: absolute;
+        top: 50%;
+        left: -100px;
+        content: "";
+        width: 200%;
+        height: 0.5px;
+        background-color: var(--bg-secondary);
+    }
+
+    .separate-text::after {
+        position: absolute;
+        top: 50%;
+        content: "";
+        right: -100px;
+        width: 200%;
+        height: 0.5px;
+        background-color: var(--bg-secondary);
+    }
+}
+
+.login-form {
+    .login-input {
+        margin: 15px 0;
+        font-size: 13px;
+
+        label {
+            font-size: 12px;
+            user-select: none;
+        }
+    }
+
+    .login-checkbox {
+        display: flex;
+        align-items: center;
+    
+        label {
+            font-size: 12px;
+            user-select: none;
+            margin-left: 4px;
+        }
+    }
+
+    .submit-btn {
+        margin: 10px 0;
+    }
+}
+
+.login-footer {
+    font-size: 13px;
+
+    a {
+        color: var(--bg-secondary);
+        text-decoration: underline;
+    }
+}
+
+.right-content {
+    flex: 1; /* Đảm bảo chiếm 50% chiều rộng */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /* Đảm bảo không vượt ra ngoài khung */
+    border-top-right-radius: 8px; /* Bo góc trên phải */
+    border-bottom-right-radius: 8px; /* Bo góc dưới phải */
+}
+
+.login-image img {
+    width: 100%; /* Chiều rộng ảnh chiếm toàn bộ vùng chứa */
+    height: 100%; /* Chiều cao ảnh vừa toàn bộ vùng chứa */
+    object-fit: cover; /* Đảm bảo ảnh hiển thị đẹp, không méo */
+    border-radius: 0; /* Nếu cần bo góc ảnh */
 }
