--- a/resources/js/pages/other/Landing/Landing.module.scss
+++ b/resources/js/pages/other/Landing/Landing.module.scss
@@ -3,86 +3,80 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 40px;
-    background-color: #fff;
+    padding: 20px 100px;
 
     .logo {
-        height: 50px;
+        height: 40px;
     }
 
     .nav {
         display: flex;
         gap: 20px;
+        align-items: center;
 
-        .loginButton,
-        .registerButton {
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-        }
-
-        .loginButton {
-            background-color: #4b2e2b; /* Dark brown */
-            color: #fff;
-        }
-
-        .registerButton {
-            background-color: #f5a623; /* Orange */
-            color: #fff;
+        a {
+            text-decoration: underline;
         }
     }
 }
 
 /* Hero Section */
 .heroSection {
-    background: url('resources/js/assets/background/background1.png') no-repeat center center;
-    background-size: cover;
-    text-align: center;
-    padding: 100px 20px;
+    height: 50vw;
+    width: 100%;
+    background-size: contain;
     color: #fff;
+    position: relative;
+
+    .heroContent {
+        position: absolute;
+        top: 130px;
+        left: 100px;
+        justify-content: left;
+        display: flex;
+        flex-direction: column;
+    }
 
     .heroTitle {
-        font-size: 64px;
+        font-size: 200px;
         font-weight: bold;
-        margin-bottom: 20px;
     }
 
     .heroDescription {
-        font-size: 20px;
+        font-size: 22px;
+        letter-spacing: 1px;
         margin-bottom: 10px;
+        width: 50%;
     }
 
     .heroAdditional {
-        font-size: 16px;
+        letter-spacing: 1px;
+        font-size: 22px;
         margin-bottom: 30px;
-    }
-
-    .exploreButton {
-        background-color: #f5a623; /* Orange */
-        color: #fff;
-        padding: 15px 40px;
-        font-size: 18px;
-        border: none;
-        cursor: pointer;
     }
 }
 
 /* Best Coffee Section */
 .bestCoffeeSection {
-    padding: 50px 20px;
-    text-align: center;
+    margin: 50px 100px 0;
+    text-align: left;
+    display: flex;
+    gap: 30px;
+    letter-spacing: 1.2px;
 
     .sectionHeading {
-        font-size: 36px;
+        font-size: 54px;
         font-weight: bold;
         color: #4b2e2b;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
+        margin-top: 70px;
     }
 
     .sectionDescription {
-        font-size: 18px;
+        font-size: 20px;
         color: #6d4c41;
         margin-bottom: 40px;
+        padding-right: 200px;
     }
 
     .illustrationImage {
@@ -93,7 +87,34 @@
 
 /* New Coffee Style Section */
 .newStyleSection {
+    margin-top: 50px;
+    margin-bottom: 300px;
     padding: 50px 20px;
+    text-align: center;
+    position: relative;
+
+    .coffeeBlast {
+        transform: scaleX(-1);
+        position: absolute;
+        bottom: -200px;
+        right: 0;
+    }
+
+    .coffeeBlastDown {
+        position: absolute;
+        top: -200px;
+        left: 0;
+    }
+
+    .sectionHeading {
+        font-size: 54px;
+        color: var(--bg-secondary);
+    }
+
+    .sectionDescription {
+        font-size: 20px;
+        margin-bottom: 30px;
+    }
 
     .coffeeList {
         display: flex;
@@ -133,14 +154,36 @@
 
 /* Footer */
 .footer {
+    position: relative;
+
     .footerTop {
         width: 100%;
-        height: auto;
+        margin-bottom: 0;
+    }
+
+    .cfImage2 {
+        position: absolute;
+        left: 0;
+        top: 20%;
+    }
+
+    .cfImage2Right {
+        position: absolute;
+        right: 0;
+        top: 20%;
+        transform: scaleX(-1);
     }
 
     .footerContent {
+        margin-top: 0;
         padding: 20px;
-        text-align: center;
+        height: 480px;
+        text-align: left;
+        color: white;
+
+        .footerDesc {
+            width: 50%;
+        }
 
         .footerLogo {
             height: 50px;
@@ -149,7 +192,8 @@
 
         .footerNav {
             display: flex;
-            justify-content: center;
+            justify-content: space-evenly;
+            margin-top: 130px;
             gap: 50px;
 
             ul {
@@ -158,14 +202,19 @@
 
                 li:first-child {
                     font-weight: bold;
+                    font-size: 26px;
+                    margin-bottom: 30px;
+                }
+
+                li {
                     margin-bottom: 10px;
                 }
             }
         }
-    }
 
-    .footerDown {
-        width: 100%;
-        height: auto;
+        .info {
+            display: flex;
+            gap: 100px;
+        }
     }
 }
