--- a/resources/js/pages/other/Register/Register.module.scss
+++ b/resources/js/pages/other/Register/Register.module.scss
@@ -97,12 +97,12 @@
 
 .register-form {
     .register-input {
-        margin: 15px 0;
+        margin: 20px 0;
         font-size: 13px;
 
         label {
             font-size: 12px;
-            user-select: none;
+            // user-select: none;
         }
     }
 
