fix error message

--- a/resources/js/components/Button/Button.module.scss
+++ b/resources/js/components/Button/Button.module.scss
@@ -67,7 +67,7 @@
 
 .primary {
     background-color: var(--cl-primary);
-    color: var(--text-color);
+    color: white;
 
     &:hover,
     &.active {
