--- a/resources/js/pages/other/Login/Login.module.scss
+++ b/resources/js/pages/other/Login/Login.module.scss
@@ -131,18 +131,22 @@
 }
 
 .right-content {
-    flex: 1; /* Đảm bảo chiếm 50% chiều rộng */
+    flex: 1; 
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden; /* Đảm bảo không vượt ra ngoài khung */
+    overflow: hidden; 
     border-radius: 17px;
     margin-right: 4px;
 }
 
 .login-image img {
-    width: 100%; /* Chiều rộng ảnh chiếm toàn bộ vùng chứa */
-    height: 100%; /* Chiều cao ảnh vừa toàn bộ vùng chứa */
-    object-fit: cover; /* Đảm bảo ảnh hiển thị đẹp, không méo */
+    width: 100%;
+    height: 100%; 
+    object-fit: cover; 
     border-radius: 8px;
+}
+input:-webkit-autofill {
+    background-color: transparent ; /* Xóa màu nền mặc định */
+    box-shadow: 0 0 0px 1000px white inset  /* Chỉnh nền trắng hoặc màu bạn muốn */
 }
