--- a/resources/js/pages/other/Register/Register.module.scss
+++ b/resources/js/pages/other/Register/Register.module.scss
@@ -142,4 +142,7 @@
         border-radius: 10px;
     }
 }
-
+input:-webkit-autofill {
+    background-color: transparent ;
+    box-shadow: 0 0 0px 1000px white inset ;
+}
