--- a/resources/js/pages/other/Landing/Landing.module.scss
+++ b/resources/js/pages/other/Landing/Landing.module.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap');
+
+
+
 /* Header */
 .header {
     display: flex;
@@ -5,8 +9,15 @@
     align-items: center;
     padding: 20px 100px;
 
-    .logo {
-        height: 40px;
+    .logoText {
+        font-family: 'Clicker Script', cursive !important;
+        font-size: 35px;
+        font-weight: 400;
+        line-height: 46.23px;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+
     }
 
     .nav {
@@ -185,9 +196,15 @@
             width: 50%;
         }
 
-        .footerLogo {
-            height: 50px;
-            margin-bottom: 20px;
+        .footerLogoText {
+            font-family: 'Clicker Script', cursive !important;
+            font-size: 54px;
+            font-weight: 400;
+            line-height: 71.32px;
+            text-align: left;
+            text-underline-position: from-font;
+            text-decoration-skip-ink: none;
+
         }
 
         .footerNav {
