--- a/resources/js/pages/other/Login/Login.module.scss
+++ b/resources/js/pages/other/Login/Login.module.scss
@@ -147,6 +147,6 @@
     border-radius: 8px;
 }
 input:-webkit-autofill {
-    background-color: transparent ; /* Xóa màu nền mặc định */
-    box-shadow: 0 0 0px 1000px white inset  /* Chỉnh nền trắng hoặc màu bạn muốn */
+    background-color: transparent ;
+    box-shadow: 0 0 0px 1000px white inset ;
 }
