--- a/resources/js/pages/user/components/header/HeaderUser.module.scss
+++ b/resources/js/pages/user/components/header/HeaderUser.module.scss
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    padding: 40px;
+    padding: 25px 50px;
 
     .logoText {
         font-family: 'Clicker Script', cursive !important;
