--- a/resources/js/components/GlobalStyles/GlobalStyles.scss
+++ b/resources/js/components/GlobalStyles/GlobalStyles.scss
@@ -8,6 +8,7 @@
     // Color
     --bg-primary: #ffffff;
     --bg-secondary: #603809;
+    --bg-secondary-2: #F0F0F0;
 
     --cl-primary: #ea6a12;
     --cl-secondary: #f8c51b;
