--- a/resources/js/components/ProductItem/ProductItem.module.scss
+++ b/resources/js/components/ProductItem/ProductItem.module.scss
@@ -40,6 +40,9 @@
     font-size: 15px;
     margin: 10px 0;
     font-weight: 600;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     svg {
         margin-right: 10px;
@@ -71,6 +74,12 @@
 
     svg path {
         fill: var(--cl-primary);
+    }
+
+    div {
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
 
