--- a/resources/js/pages/admin/ProductList/ProductList.module.scss
+++ b/resources/js/pages/admin/ProductList/ProductList.module.scss
@@ -48,8 +48,9 @@
                 margin-right: 10px;
             }
 
-            :hover {
-                color: var(--text-color)
+            &:hover {
+                color: var(--text-color);
+                cursor: pointer;
             }
         }
     }
@@ -85,4 +86,18 @@
 
 .product-list>div {
     margin-bottom: 20px;
+}
+
+.pagination {
+    display: flex;
+    justify-content: right;
+    margin-top: 20px;
+    gap: 10px;
+    margin-bottom: 30px;
+
+
+    .active {
+        background-color: var(--cl-primary-50);
+        color: var(--text-color-50);
+    }
 }
