--- a/resources/js/components/ProductItem/ProductItem.module.scss
+++ b/resources/js/components/ProductItem/ProductItem.module.scss
@@ -2,7 +2,7 @@
     --width: 400px;
     position: relative;
     width: var(--width);
-    height: 135px;
+    height: 140px;
     display: flex;
     border: 1px solid #e1e1e1;
     border-radius: 8px;
@@ -34,15 +34,21 @@
     font-size: 18px;
     font-weight: bold;
     border-bottom: 2px solid var(--cl-primary);
-}
-
-.address {
-    font-size: 15px;
-    margin: 10px 0;
-    font-weight: 600;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+.address {
+    font-size: 15px;
+    margin-top: 6px;
+    margin-bottom: 2px;
+    font-weight: 600;
+    height: 46px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+
 
     svg {
         margin-right: 10px;
@@ -65,7 +71,7 @@
 .btn {
     display: flex;
     align-items: flex-end;
-    margin-bottom: 10px;
+    margin-bottom: 7px;
     margin-left: 30px;
 
     svg {
