--- a/resources/js/pages/user/FindRestaurant/FindRestaurant.module.scss
+++ b/resources/js/pages/user/FindRestaurant/FindRestaurant.module.scss
@@ -174,3 +174,16 @@
 .filter-option>div {
     margin: 8px 0;
 }
+.pagination {
+    display: flex;
+    justify-content: right;
+    margin-top: 20px;
+    gap: 10px;
+    margin-bottom: 30px;
+    margin-right: 50px;
+
+    .active {
+        background-color: var(--cl-primary-50);
+        color: var(--text-color-50);
+    }
+}
