--- a/resources/js/layouts/admin/components/Header/HeaderAdmin.module.scss
+++ b/resources/js/layouts/admin/components/Header/HeaderAdmin.module.scss
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    padding: 20px 0 10px;
+    padding: 6px 0;
     align-items: center;
     border-bottom: 2px solid var(--cl-primary);
 
