--- a/resources/js/pages/admin/ProductList/ProductList.module.scss
+++ b/resources/js/pages/admin/ProductList/ProductList.module.scss
@@ -14,7 +14,7 @@
     justify-content: flex-end;
     align-items: flex-end;
     gap: 50px;
-    padding-bottom: 20px;
+    padding: 20px 0;
     border-bottom: 2px solid var(--cl-primary);
 
     h3 {
@@ -100,4 +100,13 @@
         background-color: var(--cl-primary-50);
         color: var(--text-color-50);
     }
+}
+
+.no-result {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    font-size: 20px;
+    color: var(--cl-primary);
 }
