--- a/resources/js/pages/user/components/restaurants/CafeItem.module.scss
+++ b/resources/js/pages/user/components/restaurants/CafeItem.module.scss
@@ -6,16 +6,20 @@
     overflow: hidden;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease;
-    &.list{
+    height: 460px;
+
+    &.list {
         flex-direction: row;
         /* align-items: center; */
         height: 240px;
     }
+
     .image-container {
         position: relative;
 
         .image {
             width: 100%;
+            max-width: 400px;
             object-fit: cover;
         }
 
@@ -47,19 +51,28 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        &.list{
+
+        &.list {
             margin-left: 150px;
             gap: 10px;
         }
+
         h3 {
             font-size: 18px;
             font-weight: bold;
             margin-bottom: 5px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         p {
             font-size: 14px;
+            height: 40px;
             color: #555;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
         }
 
         .rating {
