--- a/resources/js/pages/user/FindRestaurant/FindRestaurant.module.scss
+++ b/resources/js/pages/user/FindRestaurant/FindRestaurant.module.scss
@@ -188,32 +188,32 @@
     }
 }
 
-.btn-search {
-    // color: white;
-    border: none;
-    border-radius: 8px;
-    padding: 8px 16px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.3s ease;
+// .btn-search {
+//     // color: white;
+//     border: none;
+//     border-radius: 8px;
+//     padding: 8px 16px;
+//     cursor: pointer;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     transition: background-color 0.3s ease;
 
-    &:hover {
-        background-color: var(--cl-primary-70); /* Tăng độ đậm khi hover */
-    }
+//     &:hover {
+//         background-color: var(--cl-primary-70); /* Tăng độ đậm khi hover */
+//     }
 
-    &:active {
-        background-color: var(--cl-primary-90); /* Màu sắc khi click */
-    }
+//     &:active {
+//         background-color: var(--cl-primary-90); /* Màu sắc khi click */
+//     }
 
-    &:focus {
-        outline: 2px solid var(--cl-primary-50);
-        outline-offset: 2px;
-    }
+//     &:focus {
+//         outline: 2px solid var(--cl-primary-50);
+//         outline-offset: 2px;
+//     }
 
-    .search-icon-2 {
-        background-color:var(--cl-primary-50) ;
-        font-size: 18px;
-    }
-}
+//     .search-icon-2 {
+//         background-color:var(--cl-primary-50) ;
+//         font-size: 18px;
+//     }
+// }
