--- a/resources/js/layouts/admin/components/Header/HeaderAdmin.module.scss
+++ b/resources/js/layouts/admin/components/Header/HeaderAdmin.module.scss
@@ -3,6 +3,8 @@
     padding: 6px 0;
     align-items: center;
     border-bottom: 2px solid var(--cl-primary);
+    width: calc(100% - 200px);
+    margin: 0 auto;
 
     .logoText {
         font-family: 'Clicker Script', cursive !important;
