--- a/resources/js/pages/user/Home/Home.module.scss
+++ b/resources/js/pages/user/Home/Home.module.scss
@@ -1,18 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap');
 
-
+/* Home Page Wrapper */
+.homePage {
+    width: 100%;
+    overflow-x: hidden;
+}
 
 /* Search Bar Section */
-.searchSection {
-    padding: 20px 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.banner {
+    position: relative;
+    width: 100%;
+    height: 400px; /* Chiều cao của banner */
 
-    .searchBar {
-        width: 80%;
-        padding: 10px;
-        font-size: 16px;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    h1 {
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-size: 32px;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .searchBarWrapper {
+        width: Fixed (732.66px)px;
+        height: Hug (57.27px)px;
+        padding: 20.21px 26.95px 20.21px 26.95px;
+        gap: 8.42px;
+
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        align-items: center;
+        width: 50%;
+        background-color: white;
+        border-radius: 8px;
+        
+
+        .search-icon {
+            margin-left: 12px;
+            color: #aaa;
+            font-size: 18px;
+        }
     }
 }
 
@@ -21,11 +59,14 @@
     margin-top: 50px;
     padding: 50px 20px;
     text-align: center;
+    position: relative;
 
     .coffeeBlast {
         position: absolute;
         top: -200px;
         left: 0;
+        width: 200px;
+        height: auto;
     }
 
     .coffeeBlastDown {
@@ -33,17 +74,27 @@
         position: absolute;
         bottom: -200px;
         right: 0;
+        width: 200px;
+        height: auto;
     }
 
     .sectionHeading {
         font-size: 54px;
         color: var(--bg-secondary);
+        margin-bottom: 20px;
+    }
+
+    .sectionDescription {
+        font-size: 16px;
+        color: var(--text-secondary);
+        margin-bottom: 40px;
     }
 
     .coffeeList {
         display: flex;
         justify-content: center;
         gap: 20px;
+        flex-wrap: wrap;
     }
 }
 
@@ -56,18 +107,27 @@
     .sectionHeading {
         font-size: 54px;
         color: var(--bg-secondary);
+        margin-bottom: 20px;
+    }
+
+    .sectionDescription {
+        font-size: 16px;
+        color: var(--text-secondary);
+        margin-bottom: 40px;
     }
 
     .coffeeList {
         display: flex;
         justify-content: center;
         gap: 20px;
+        flex-wrap: wrap;
     }
 }
 
 /* Footer */
 .footer {
     position: relative;
+    margin-top: 50px;
 
     .footerTop {
         width: 100%;
@@ -78,6 +138,8 @@
         position: absolute;
         left: 0;
         top: 20%;
+        width: 150px;
+        height: auto;
     }
 
     .cfImage2Right {
@@ -85,6 +147,8 @@
         right: 0;
         top: 20%;
         transform: scaleX(-1);
+        width: 150px;
+        height: auto;
     }
 
     .footerContent {
@@ -93,9 +157,16 @@
         height: 480px;
         text-align: left;
         color: white;
+        background-size: contain;
 
         .footerDesc {
             width: 50%;
+            margin-bottom: 20px;
+
+            p {
+                font-size: 14px;
+                line-height: 1.5;
+            }
         }
 
         .footerLogoText {
@@ -106,7 +177,7 @@
             text-align: left;
             text-underline-position: from-font;
             text-decoration-skip-ink: none;
-
+            margin-bottom: 20px;
         }
 
         .footerNav {
