--- a/resources/js/components/Card/Card.module.scss
+++ b/resources/js/components/Card/Card.module.scss
@@ -10,12 +10,12 @@
 .avatar {
     width: 100%;
     aspect-ratio: 5 / 4;
-    background-color: black;
+    overflow: hidden;
 
     img {
         width: 100%;
         height: 100%;
-        object-fit: contain;
+        object-fit: cover;
     }
 }
 
@@ -67,7 +67,7 @@
 
 .view-btn {
     position: absolute;
-    top: 97%;
+    bottom: -20px;
     left: 50%;
     transform: translateX(-50%);
 }
