--- a/resources/js/pages/user/Infor/UserInfor.module.scss
+++ b/resources/js/pages/user/Infor/UserInfor.module.scss
@@ -144,6 +144,6 @@ input::placeholder {
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    object-fit: contain;
+    object-fit: cover;
     border: 2px solid var(--cl-primary);
 }
