--- a/resources/js/layouts/user/components/Header/HeaderUser.module.scss
+++ b/resources/js/layouts/user/components/Header/HeaderUser.module.scss
@@ -55,7 +55,7 @@
     .avatar-header {
         width: 45px;
         height: 45px;
-        object-fit: contain;
+        object-fit: cover;
         border-radius: 50%;
         border: 2px solid var(--cl-primary);
     }
