--- a/resources/js/pages/user/Infor/UserInfor.module.scss
+++ b/resources/js/pages/user/Infor/UserInfor.module.scss
@@ -5,8 +5,8 @@
 
 .header-image {
     width: 100%;
-    height: 200px; /* Chiều cao cố định cho header */
-    border-radius: 8px; /* Tạo góc bo cho hình */
+    height: 200px; 
+    border-radius: 8px; 
 }
 
 .header-title {
@@ -31,12 +31,12 @@
             transform: translate(-50%, -50%);
             width: 36px;
             height: 36px;
-            background-color: #ff914d; /* Màu nền cam cho icon */
+            background-color: #ff914d; 
             border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
-            border: 2px solid white; /* Viền trắng quanh icon */
+            border: 2px solid white; 
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
             svg {
@@ -77,7 +77,6 @@
 }
 .container-input {
     padding: 30px 160px;
-    // color: #CACED8;
 }
 .header-profile-tile {
     display: flex;
@@ -130,16 +129,14 @@ input::placeholder {
     height: 50px;
     color: white;
 }
+.button-submit button:hover {
+    background-color: #d76119;
+}
 
 .selection-dropdown {
     width: 100%;
 }
-// .default-input label{
-//     color: #083A50;
-// }
-// .dropdown .label{
-//     color: #083A50;
-// }
+
 .avatar {
     width: 200px;
     height: 200px;
