--- a/resources/js/pages/user/components/restaurants/CafeItem.module.scss
+++ b/resources/js/pages/user/components/restaurants/CafeItem.module.scss
@@ -19,6 +19,7 @@
 
         .image {
             width: 100%;
+            height: 100%;
             max-width: 400px;
             object-fit: cover;
         }
