--- a/resources/js/layouts/user/components/Header/HeaderUser.module.scss
+++ b/resources/js/layouts/user/components/Header/HeaderUser.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     padding: 5px 50px;
     z-index: 100;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
     .logoText {
         font-family: 'Clicker Script', cursive !important;
