--- a/resources/js/pages/user/components/header/HeaderUser.module.scss
+++ b/resources/js/pages/user/components/header/HeaderUser.module.scss
@@ -87,3 +87,18 @@
     top: -26px;
     right: 38px;
 }
+.favorite-header{
+    margin-right: 15px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    border-bottom: #EA6A12 4px solid;
+    padding-bottom: 8px;
+}
+.favorite-header span{
+    font-weight: 500;
+    color: #EA6A12;
+}
+.favorite-header svg{
+    color: #EA6A12;
+}
