test goi api create collection

--- a/resources/js/layouts/user/components/Header/HeaderUser.module.scss
+++ b/resources/js/layouts/user/components/Header/HeaderUser.module.scss
@@ -108,6 +108,7 @@
 .favorite-header span{
     font-weight: 500;
     color: #EA6A12;
+    margin-left: 7px;
 }
 .favorite-header svg{
     color: #EA6A12;
