--- a/resources/js/pages/user/Favorite/Favorite.module.scss
+++ b/resources/js/pages/user/Favorite/Favorite.module.scss
@@ -89,9 +89,12 @@
         }
     }
     .name-collection{
-        font-size: 30px;
-        font-weight: 600;
-        color: var(--cl-favorite);
+        display: flex;
+        input {
+            font-size: 30px;
+            font-weight: 600;
+            color: var(--cl-favorite);
+        }
     }
     .filters-right {
         display: flex;
@@ -101,6 +104,7 @@
         .view-icon {
             font-size: 20px;
             cursor: pointer;
+            margin-right: 10px;
         }
         &.active {
             color: #000;
