--- a/resources/js/components/Popup/Popup.module.scss
+++ b/resources/js/components/Popup/Popup.module.scss
@@ -167,3 +167,45 @@
         }
     }
 }
+
+.VideoInput {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .label {
+    }
+}
+
+.VideoInput_container {
+    position: relative;
+    height: 100px;
+    width: 200px;
+    border: 1px dashed #797575;
+    border-radius: 8px;
+    background-color: var(--bg-secondary-2);
+    margin: 6px 0;
+
+    button {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -44%);
+    }
+
+    .VideoInput_btn{
+        top: 0;
+        right: -20px;
+        left: auto;
+    }
+}
+
+.VideoInput_input {
+    display: none;
+}
+
+.VideoInput_video {
+    display: block;
+    margin: 0;
+}
