--- a/resources/js/pages/user/Favorite/Favorite.module.scss
+++ b/resources/js/pages/user/Favorite/Favorite.module.scss
@@ -163,3 +163,17 @@
         margin-left: 4px;
     }
 }
+.pagination {
+    display: flex;
+    justify-content: right;
+    margin-top: 20px;
+    gap: 10px;
+    margin-bottom: 30px;
+    margin-right: 50px;
+
+    .active {
+        background-color: var(--cl-primary-50);
+        color: var(--text-color-50);
+    }
+}
+
