--- a/resources/js/components/GlobalStyles/GlobalStyles.scss
+++ b/resources/js/components/GlobalStyles/GlobalStyles.scss
@@ -3,12 +3,11 @@
 // @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
 :root {
     // Color
     --bg-primary: #ffffff;
     --bg-secondary: #603809;
-    --bg-secondary-2: #F0F0F0;
+    --bg-secondary-2: #f0f0f0;
 
     --cl-primary: #ea6a12;
     --cl-secondary: #f8c51b;
@@ -74,6 +73,10 @@ html *::-webkit-scrollbar-thumb {
 html *::-webkit-scrollbar-track {
     border-radius: 0;
     background: rgba(0, 0, 0, 0);
+}
+
+.leaflet-pane {
+    z-index: 10 !important;
 }
 
 // Responsive
