--- a/resources/js/layouts/user/components/Header/HeaderUser.module.scss
+++ b/resources/js/layouts/user/components/Header/HeaderUser.module.scss
@@ -63,14 +63,14 @@
 
     .dropdown-menu {
         position: absolute;
-        top: 70px;
-        right: 0;
+        top: 50px;
+        right: -10px;
         background-color: white;
         border: 1px solid var(--text-color-50);
         border-radius: 8px;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         width: 150px;
-        z-index: 10;
+        z-index: 10000;
         display: flex;
         flex-direction: column;
         padding: 10px 0;
@@ -97,19 +97,19 @@
     top: -26px;
     right: 38px;
 }
-.favorite-header{
+.favorite-header {
     margin-right: 15px;
     display: flex;
     gap: 10px;
     align-items: center;
     // border-bottom: #EA6A12 4px solid;
-    padding-bottom: 8px;
+    // padding-bottom: 8px;
 }
-.favorite-header span{
+.favorite-header span {
     font-weight: 500;
-    color: #EA6A12;
+    color: #ea6a12;
     margin-left: 7px;
 }
-.favorite-header svg{
-    color: #EA6A12;
+.favorite-header svg {
+    color: #ea6a12;
 }
