--- a/resources/js/pages/user/components/restaurants/FavoriteItem.module.scss
+++ b/resources/js/pages/user/components/restaurants/FavoriteItem.module.scss
@@ -123,7 +123,7 @@
     top: 10px;
     right: 10px;
     font-size: 20px;
-    color: red;
+    color: #aaa;
     background: white;
     border-radius: 50%;
     padding: 5px;
@@ -136,6 +136,9 @@
     align-items: center;
     margin-right: 14px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    &.active {
+        color: red;
+    }
 }
 .cafe-detail {
     padding: 10px;
