--- a/resources/js/pages/user/ProductDetail/CommentInput/CommentInput.module.scss
+++ b/resources/js/pages/user/ProductDetail/CommentInput/CommentInput.module.scss
@@ -9,7 +9,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        right: 220px;
+        right: 320px;
         bottom: 0;
         border-top-left-radius: 50px;
         border-bottom-left-radius: 50px;
@@ -17,20 +17,27 @@
     }
 }
 
-.camera {
+.image-preview {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 20px;
-    font-size: 20px;
-}
+    top: 10%;
+    bottom: 10%;
+    right: 220px;
+    width: 80px;
+    border: 1px dashed black;
 
-.smile {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 60px;
-    font-size: 20px;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+    .image-preview-box {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .rating {
@@ -38,4 +45,32 @@
     top: 50%;
     transform: translateY(-50%);
     right: 100px;
+    cursor: pointer;
+}
+
+.smile {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 100px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.camera {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 60px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.submit-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 20px;
+    font-size: 20px;
+    cursor: pointer;
 }
