--- a/resources/js/pages/user/ProductDetail/ProductDetail.module.scss
+++ b/resources/js/pages/user/ProductDetail/ProductDetail.module.scss
@@ -66,7 +66,8 @@
 
         .address,
         .time,
-        .price {
+        .price,
+        .style {
             display: flex;
             align-items: center;
             gap: 20px;
@@ -135,6 +136,13 @@
         .user-comment {
             color: #959895;
             font-weight: 400;
+        }
+
+        .image-commnet {
+            width: 30%;
+            aspect-ratio: 16 / 9;
+            object-fit: contain;
+            border: 2px solid var(--cl-primary);
         }
     }
 }
