--- a/resources/js/pages/user/components/restaurants/FavoriteItem.module.scss
+++ b/resources/js/pages/user/components/restaurants/FavoriteItem.module.scss
@@ -54,6 +54,8 @@
     gap: 5px;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: 20px;
 }
 
 .cafe-time_save {
