--- a/resources/js/pages/user/components/restaurants/FavoriteItem.module.scss
+++ b/resources/js/pages/user/components/restaurants/FavoriteItem.module.scss
@@ -6,13 +6,13 @@
         border-radius: 8px;
         background-color: #fff;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        height: 210px;
+        height: 235px;
 
     .image-container {
-        width: 30%;
+        width: 24%;
         .cafe-image {
-            width: 193px;
-            height: 193px;
+            width: 233px;
+            height: 221px;
             object-fit: cover;
             border-radius: 8px;
         }
@@ -23,8 +23,8 @@
 .collection{
     display: flex;
     flex-direction: column;
-    width: 70%;
-    gap: 20px;
+    width: 80%;
+    gap: 25px;
     margin-right: 24px;
 }
 .cafe-infor{
@@ -56,6 +56,7 @@
     align-items: center;
     margin-left: auto;
     margin-right: 20px;
+    width: 120px;
 }
 
 .cafe-time_save {
@@ -63,6 +64,7 @@
     gap: 5px;
     justify-content: center;
     align-items: center;
+    width: 146px;
 }
 
 .cafe-rating {
@@ -118,6 +120,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.location{
+    margin-top: 2px;
 }
 
 .favorite-icon {
