--- a/resources/js/pages/user/components/restaurants/CafeItem.module.scss
+++ b/resources/js/pages/user/components/restaurants/CafeItem.module.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease;
-    height:530px;
+    height: 530px;
 
     &.list {
         flex-direction: row;
@@ -19,7 +19,7 @@
 
         .image {
             width: 100%;
-            height: 100%;
+            aspect-ratio: 5 / 4;
             max-width: 400px;
             object-fit: cover;
         }
@@ -56,15 +56,15 @@
         &.list {
             margin-left: 45px;
             gap: 10px;
-            p{
+            p {
                 font-size: 15px;
             }
-            h3{
+            h3 {
                 font-size: 24px;
             }
-            .wrap-time{
+            .wrap-time {
                 display: flex;
-                gap:25px
+                gap: 25px;
             }
         }
 
@@ -76,7 +76,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
         }
-        h5{
+        h5 {
             font-weight: 400;
             font-size: 17px;
         }
@@ -97,7 +97,7 @@
             font-weight: bold;
 
             span {
-                color: #989B9E;
+                color: #989b9e;
                 margin-left: 10px;
                 font-weight: 400;
             }
