--- a/resources/js/pages/user/components/restaurants/FavoriteItem.module.scss
+++ b/resources/js/pages/user/components/restaurants/FavoriteItem.module.scss
@@ -13,7 +13,7 @@
         .cafe-image {
             width: 233px;
             height: 221px;
-            object-fit: cover;
+            // object-fit: cover;
             border-radius: 8px;
         }
     }
