--- a/resources/js/pages/user/components/restaurants/CafeItem.module.scss
+++ b/resources/js/pages/user/components/restaurants/CafeItem.module.scss
@@ -16,6 +16,11 @@
 
     .image-container {
         position: relative;
+        width: 100%;
+
+        a {
+            width: 100%;
+        }
 
         .image {
             width: 100%;
